Fixing small path issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         working-directory: ./backend
         run: npm install
-        working-directory: backend
+        working-directory: ./backend
 
       - name: Run tests
         working-directory: ./backend
